version mobile correction

--- a/style.css
+++ b/style.css
@@ -210,14 +210,21 @@ footer{
     .body{
         margin: 0;
         padding: 0;
+        width: 100vw;
+        height: 100vh;
+    }
+    .infos h1 {
+        font-size: 24px;
+        margin-top: 8px;
     }
     nav {
-         width: 36%;
-         top: 5%;
-         height: 7%;
-         position: absolute;
-         background-color: #3734344f;
-         z-index: 1;
+        width: 40%;
+        top: 3%;
+        height: 7%;
+        position: absolute;
+        background-color: #37343400;
+        z-index: 1;
+        margin-left: 20px;
     }
     .liste li {
         display: none;
@@ -226,38 +233,26 @@ footer{
         
     }
     .sec1{
+        position: relative;
         margin: 0;
         padding: 108px;
         background-size: cover;
         background-position: center;
-        height: 66%;
-        width: 100%;
+        height: 50%;
+        width: auto;
     }
     .sec2{
         padding: 108px;
         height: auto;
+        width: auto;  
     }
- @media  screen and (max-width:414px) {
-  
-    nav {
-         width: 38%;
-         top: 5%;
-         height: 7%;
-         position: absolute;
-         background-color: #3734344f;
-         z-index: 1;
-    }
-    .sec1{
-        height: 50%;
-        width: 100%;
-        position: relative;
-    }
+    
     .left{
-    margin: 0 auto;
-    height: auto;
-    position: absolute;
-    top: 130px; 
-    left: 30px;
+        margin: 0 auto;
+        height: auto;
+        position: absolute;
+        top: 35%; 
+        left: 55px;
     }
     .t1{
         font-size: 0.5rem;
@@ -266,10 +261,12 @@ footer{
         font-size: 1em;
         font-weight: 300;
     }
-    .sec2{
-        padding: none;
     }
-
+    
+    .infos p{
+        font-size: 15px;
+        padding: 0px 15px 0 15px;
+    }
     .sec3{
         width: 100%;
         display: grid;
@@ -293,21 +290,17 @@ footer{
         font-size: 1rem;
     }
     .t1 p{
+        font-size: 10px;
+        font-weight: 600;
         padding-bottom: 15%;
         text-align: center;
     }
     .t1 h1{
-        font-size: large;
-        font-weight: 500;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
     }
-    .infos h1{
-        font-size: 24px;
-        margin-top: 8px;
-    }
-    .infos p{
-        font-size: 15px;
-        padding: 0px 15px 0 15px;
-    }
+
     .infos a { 
     border-radius: 8px;
     font-size: 1.5rem;
@@ -315,5 +308,4 @@ footer{
     padding: 10px;
     margin-bottom: 8px;
     }
- }
-}
+ 
